@@ -154,4 +154,4 @@ string(20) "Key has been revoked"
 string(27) "Key was rejected by service"
 string(10) "Owner died"
 string(21) "State not recoverable"
-string(17) "Unknown error 132"
+string(37) "Operation not possible due to RF-kill"
